# pontuall

./: package-lock.json  package.json  tailwind.config.ts
.cargo/: config.toml
.github/workflows/: build.yml
public/: global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json  splashscreen.json
src-tauri/src/: main.rs
src-tauri/src/acr122u/: mod.rs  tauri_commands.rs
src-tauri/src/acr122u/card/: mod.rs  read.rs  write.rs
src-tauri/src/acr122u/card/utils/: authenticate.rs
src-tauri/src/acr122u/reader/: connect.rs
src-tauri/src/acr122u/utils/: errors.rs
src-tauri/src/cache/: get.rs  insert.rs  mod.rs  set.rs  update.rs
src-tauri/src/database/: connect.rs  mod.rs  sync.rs  tauri_commands.rs
src-tauri/src/database/helpers/: mod.rs  set_app_connection.rs
src-tauri/src/database/schemas/: mod.rs  permission_verify.rs  user_schema.rs
src-tauri/src/excel/: create.rs  mod.rs
src-tauri/src/misc/: get.rs  mod.rs  ping.rs  set_db_uri.rs  setup.rs  token.rs
src/components/component/: component.tsx  icons.tsx  layout.tsx  themeprovider.tsx
src/components/main/: Admin.tsx  Header.tsx  Home.tsx  Settings.tsx
src/components/main/helpers/: home.ts
src/components/main/subComponents/admin/: addEmployee.tsx  employees.tsx
src/components/splashscreen/: FirstUser.tsx  HoursSetup.tsx  MongoDbSetup.tsx
src/components/ui/: avatar.tsx  button.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  select.tsx  toast.tsx  tooltip.tsx
src/lib/: utils.ts
src/lib/Tauri/: index.ts
src/pages/: _app.tsx  index.tsx  splashscreen.tsx
src/types/: types.d.ts
types/: types.d.ts
