[package]
name = "pontuall"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-stronghold = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pcsc = "2.8.2"
futures = "0.3.30"
tokio = { version = "1.38.1", features = ["full"] }
bitflags = "2.6.0"
mongodb = "3.0.1"
rust-argon2 = "2.1.0"
rand = "0.8.5"
uuid = { version = "1.10.0", features = ["v4"] }
dirs = "5.0.1"
